--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ nb-configuration.xml
 
 # Local environment
 .env
+config.yml
+production-deployments.json
+preview-deployments.json
 
 # Plugin directory
 /.quarkus/cli/plugins/
