--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ reqwest = { version = "^0.11", features = ["blocking", "json"] }
 lazy_static = "^1.4"
 tracing = "^0.1"
 tracing-subscriber = "^0.3"
-tracing-appender = "0.2"
+tracing-appender = "^0.2"
 color-eyre = "^0.6"
 chrono = "^0.4"
-bollard = "*"
+bollard = "^0.15"
 serenity = "^0.12"
 
 [target.'cfg(unix)'.dependencies]
