--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ color-eyre = "^0.6"
 chrono = "^0.4"
 bollard = "^0.15"
 serenity = "^0.12"
+url = "^2.5"
+paste = "^1.0"
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.5"
