--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bollard = "^0.15"
 serenity = "^0.12"
 url = "^2.5"
 paste = "^1.0"
+regex = "^1.0"
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.5"
