--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,15 +26,7 @@ serenity = "^0.12"
 url = "^2.5"
 paste = "^1.0"
 regex = "^1.0"
-
-
-[dependencies.uuid]
-version = "1.7.0"
-features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-]
+uuid = { version = "^1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.5"
