--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ url = "^2.5"
 paste = "^1.0"
 regex = "^1.0"
 uuid = { version = "^1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
+git2 = "^0.18"
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.5"
