--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ tracing-subscriber = "^0.3" # features = ["env-filter"]
 tracing-appender = "^0.2"
 color-eyre = "^0.6"
 chrono = "^0.4"
-bollard = { version = "^0.16", features = ["buildkit"] }
+bollard = "^0.16"
 serenity = "^0.12"
 url = "^2.5"
 paste = "^1.0"
