--- a/Traefik/traefik.yml
+++ b/Traefik/traefik.yml
@@ -1,39 +1,42 @@
 api:
   dashboard: true
+  debug: true
 
 entryPoints:
-  web:
+  http:
     address: ":80"
     http:
       redirections:
-        entryPoint:
-          to: websecure
-
-  websecure:
+        entrypoint:
+          to: https
+          scheme: https
+  https:
     address: ":443"
-    http:
-      middlewares:
-        - secureHeaders@file
-      tls:
-        certResolver: letsencrypt
+
+serversTransport:
+  insecureSkipVerify: true
 
 providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
   file:
-    filename: /dynamic.yml
+    filename: /config.yml
 
 certificatesResolvers:
-  letsencrypt:
+  cloudflare:
     acme:
-      email: itzbunniyt@gmail.com
+      email: 17bestradiol@proton.me
       storage: acme.json
-      keyType: EC384
-      dnschallenge:
+      dnsChallenge:
         provider: cloudflare
-        delayBeforeCheck: 300
+        #disablePropagationCheck: true # uncomment this if you have issues pulling certificates through cloudflare, By setting this flag to true disables the need to wait for the propagation of the TXT record to all authoritative name servers.
         resolvers:
-          - 8.8.8.8:53
-      httpChallenge:
-        entryPoint: web
+          - "1.1.1.1:53"
+          - "1.0.0.1:53"
+
+log:
+  level: "INFO"
+  filePath: "/var/log/traefik/traefik.log"
+accessLog:
+  filePath: "/var/log/traefik/access.log"
