--- a/Traefik/traefik.yml
+++ b/Traefik/traefik.yml
@@ -5,11 +5,11 @@ api:
 entryPoints:
   http:
     address: ":80"
-    http:
-      redirections:
-        entrypoint:
-          to: https
-          scheme: https
+    # http:
+    #   redirections:
+    #     entrypoint:
+    #       to: https
+    #       scheme: https
   https:
     address: ":443"
 
@@ -21,7 +21,7 @@ providers:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
   file:
-    filename: /config.yml
+    filename: /dynamic.yml
 
 certificatesResolvers:
   cloudflare:
