--- a/compose.yml
+++ b/compose.yml
@@ -54,10 +54,10 @@ services:
         labels:
             - traefik.enable=true
             - traefik.docker.network=traefik-net
-            - traefik.http.routers.traefik.entrypoints=http
-            - traefik.http.routers.traefik.rule=Host(`traefik.lunarlabs.cc`)
-            - traefik.http.routers.traefik.middlewares=traefik-https-redirect@file
-            - traefik.http.routers.traefik-secure.entrypoints=https
+            # - traefik.http.routers.traefik.entrypoints=http
+            # - traefik.http.routers.traefik.rule=Host(`traefik.lunarlabs.cc`)
+            # - traefik.http.routers.traefik.middlewares=traefik-https-redirect@file
+            - traefik.http.routers.traefik-secure.entrypoints=http,https
             - traefik.http.routers.traefik-secure.rule=Host(`traefik.lunarlabs.cc`)
             - traefik.http.routers.traefik-secure.service=api@internal
             - traefik.http.routers.traefik-secure.middlewares=user-auth@file
