--- a/Traefik/traefik.yml
+++ b/Traefik/traefik.yml
@@ -49,11 +49,11 @@ tls:
 entryPoints:
   web:
     address: ":80"
-    http:
-      redirections:
-        entryPoint:
-          to: web-secure
-          scheme: https
+    # http:
+    #   redirections:
+    #     entryPoint:
+    #       to: web-secure
+    #       scheme: https
   web-secure:
     address: ":443"
     http:
@@ -100,4 +100,3 @@ http:
       service: api@internal
       middlewares:
         - api-auth
-      tls: true
