--- a/compose.yml
+++ b/compose.yml
@@ -10,10 +10,9 @@ services:
             - "./.env:/app/.env"
         labels:
             - "traefik.enable=true"
-            - "traefik.http.routers.voyager.entrypoints=web-secure"
-            - "traefik.http.routers.voyager.rule=Host(`voyager-api.lunarlabs.cc`)"
+            - "traefik.http.routers.voyager.entrypoints=web,web-secure"
+            - "traefik.http.routers.voyager.rule=HostRegexp(`{host:.+}`)"
             - "traefik.http.routers.voyager.service=voyager"
-            - "traefik.http.routers.voyager.tls=true"
             - "traefik.http.services.voyager.loadbalancer.server.port=8765"
         depends_on:
             - mongo
