--- a/Traefik/traefik.yml
+++ b/Traefik/traefik.yml
@@ -49,11 +49,11 @@ tls:
 entryPoints:
   web:
     address: ":80"
-    # http:
-    #   redirections:
-    #     entryPoint:
-    #       to: web-secure
-    #       scheme: https
+    http:
+      redirections:
+        entryPoint:
+          to: web-secure
+          scheme: https
   web-secure:
     address: ":443"
     http:
